--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -18,69 +18,46 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Food, LLC</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="#">Chicken</a></li>
+            <li><a href="#">Beef</a></li>
+            <li><a href="#">Sushi</a></li>
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#">Chicken</a></li>
+        <li><a href="#">Beef</a></li>
+        <li><a href="#">Sushi</a></li>
       </ul>
     </div>
   </div>
 </nav>
   
-<div class="container">
-  <h3>Collapsible Navbar</h3>
-  <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try to re-size this window).
-  <p>Only when the button is clicked, the navigation bar will be displayed.</p>
-</div>
-
 </body>
 </html>
 
-    <div class="col-lg-12 menu-item">     
-     <h4 class="menu-title text-center">Chicken</h4>
-     <p class="text-justify">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi libero deleniti repellat veniam quos alias! Recusandae excepturi expedita cumque vitae modi assumenda vero possimus quod rerum nisi a ullam repellat cum ex ipsam, quis voluptatibus omnis rem neque praesentium iure at ducimus! Repudiandae perspiciatis dolor cum minus voluptates asperiores nam eos aperiam, fugiat corporis. Doloremque, officiis itaque quia dolores vero reiciendis sapiente consectetur beatae? Unde vel error laboriosam ut eum consectetur consequatur reiciendis placeat temporibus alias officia quis nihil aliquid accusamus dicta, sequi autem, rem distinctio, corrupti pariatur et. Deserunt!
-     </p>
-   </div>
-   <div class="col-lg-12 menu-item">     
-     <h4 class="menu-title text-center">Beef</h4>
-     <p class="text-justify">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi libero deleniti repellat veniam quos alias! Recusandae excepturi expedita cumque vitae modi assumenda vero possimus quod rerum nisi a ullam repellat cum ex ipsam, quis voluptatibus omnis rem neque praesentium iure at ducimus! Repudiandae perspiciatis dolor cum minus voluptates asperiores nam eos aperiam, fugiat corporis. Doloremque, officiis itaque quia dolores vero reiciendis sapiente consectetur beatae? Unde vel error laboriosam ut eum consectetur consequatur reiciendis placeat temporibus alias officia quis nihil aliquid accusamus dicta, sequi autem, rem distinctio, corrupti pariatur et. Deserunt!
-     </p>
-   </div>
-
-   <div class="col-lg-12 menu-item">     
-     <h4 class="menu-title text-center">Sushi</h4>
-     <p class="text-justify">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate eligendi nam mollitia repudiandae debitis explicabo quibusdam consectetur id neque! Accusamus eum non veniam in dolor, porro mollitia recusandae modi eaque expedita maiores nobis eos aliquam reiciendis amet repudiandae nihil praesentium laudantium quia corporis maxime architecto, dolores voluptatem vero. Rem saepe molestias perspiciatis explicabo sapiente nulla aut dolores inventore dignissimos quos doloribus laborum quas odit sed ipsum perferendis, voluptatum ducimus unde. Veritatis modi numquam, nobis velit sunt sed id fugit sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi libero deleniti repellat veniam quos alias! Recusandae excepturi expedita cumque vitae modi assumenda vero possimus quod rerum nisi a ullam repellat cum ex ipsam, quis voluptatibus omnis rem neque praesentium iure at ducimus! Repudiandae perspiciatis dolor cum minus voluptates asperiores nam eos aperiam, fugiat corporis. Doloremque, officiis itaque quia dolores vero reiciendis sapiente consectetur beatae? Unde vel error laboriosam ut eum consectetur consequatur reiciendis placeat temporibus alias officia quis nihil aliquid accusamus dicta, sequi autem, rem distinctio, corrupti pariatur et. Deserunt!
-     </p>
-   </div>
- </div>
-
+  <p class="text-center">Our Menu</p>
+  <div class="container">
+       <div class="row">
+        <div class="chicken-section col-lg-12 col-md-12 col-xs-12 col-sm-12">
+         <div class="chicken-title">Chicken</div>
+         <div class="chicken-content">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti necessitatibus architecto laborum voluptatibus aut exercitationem, repellendus reiciendis expedita, tenetur totam unde aliquid. Molestiae quod quam numquam, sed optio laborum laboriosam culpa dolore nobis eaque perspiciatis soluta, nihil cum voluptate labore quis blanditiis, voluptatibus aliquam. Quisquam repellat placeat obcaecati amet sunt.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore soluta, incidunt possimus iste explicabo doloremque laboriosam alias architecto esse debitis minus corrupti ea! Quidem officiis totam quas nulla saepe et quaerat, reiciendis perspiciatis doloribus eos sed. Quam, sapiente maiores animi voluptatibus ex excepturi. Aspernatur expedita fugit placeat, sed quidem adipisci vero molestiae quae totam dolor cupiditate non dolorem quos magni sunt eum obcaecati explicabo, itaque eos voluptatem tenetur quasi inventore! Illo autem nihil quae, dolore rerum fugit rem excepturi ut ipsa? Accusantium, ipsa soluta, laudantium voluptatum, recusandae aspernatur libero voluptates aperiam amet omnis magnam eum ad! Ut maxime nobis magni hic laudantium consequatur sit omnis atque, qui temporibus nostrum, rem delectus esse vitae! Fuga ab quos qui aut nemo quas beatae nihil dolor eos voluptatibus obcaecati exercitationem et maiores quod commodi ipsam sapiente repudiandae, fugit quis. Repudiandae dicta maiores ut fugit minima porro id, explicabo eum. Vero at, officiis praesentium quae impedit id architecto ad nisi labore pariatur saepe eaque illo nemo quos nesciunt, animi deserunt est optio, harum quibusdam quisquam. Laudantium facere labore accusantium nisi. Incidunt veniam aliquid quaerat blanditiis amet, eos nulla quo saepe repudiandae voluptates ab nisi inventore impedit error tenetur voluptatibus a. Magni, perferendis mollitia tempore fugiat voluptatibus accusamus quam, soluta delectus facilis numquam maiores nobis est similique in porro eaque itaque suscipit! Ipsa aliquid modi, eveniet asperiores placeat tempora, maiores blanditiis quidem reiciendis eum tempore natus earum id enim doloremque consequatur maxime perspiciatis provident quisquam quam numquam quibusdam praesentium autem! Dolorem amet consequatur voluptate dolores commodi officiis fuga et quaerat assumenda facere, minima impedit! Distinctio tempora et inventore eveniet, possimus maxime quo nulla optio consequatur aut, numquam vitae ut recusandae tenetur culpa? A provident veritatis ipsa blanditiis perferendis sit at porro! Voluptatum, labore aliquam eum nisi repellendus tenetur sit. Culpa incidunt consectetur, provident, minima sed amet quos molestias laboriosam quasi corporis alias, iusto eaque! Sed incidunt totam quis voluptate, omnis vitae. Sit nostrum perferendis libero sint commodi? Ut repudiandae, cupiditate asperiores tempora labore, ea odit exercitationem dolorem delectus aut modi magni dolore aliquid dicta fugiat id nihil dolor. Corporis quaerat, accusantium, maxime est odit numquam expedita nihil nobis velit totam distinctio illum unde, ducimus impedit laboriosam? Amet qui earum minima perferendis voluptatibus obcaecati repudiandae praesentium assumenda tempore voluptates, maiores aliquid sunt molestias? Odit necessitatibus maxime perspiciatis rem, saepe nobis earum aut quos suscipit laudantium hic quod, quia officiis id? Nihil, delectus maiores totam ea iusto libero adipisci quisquam nobis incidunt voluptatibus nisi sunt quos quidem fugiat. Blanditiis ipsam numquam vero, sequi iste voluptatibus, odit natus, sapiente corrupti nostrum minima incidunt eveniet praesentium laborum quibusdam ratione vel nam. Minima porro cum harum veniam ea at. Ullam quos, repellat mollitia repudiandae explicabo perspiciatis dolorum at distinctio beatae sapiente architecto quo illo reiciendis pariatur hic vero soluta placeat temporibus perferendis. Sed saepe accusantium similique dignissimos, laborum aliquid dolores at tempore rem ipsa. Sit consequatur nulla possimus molestias praesentium, vero officia iure molestiae tempore hic ab corporis veritatis eius neque eligendi ratione expedita voluptates esse quisquam aut provident minus.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, minima atque? Nobis debitis nihil, iste similique, deserunt ut accusamus qui itaque nostrum iure maxime? Porro amet fuga quos ex et sint, impedit blanditiis quae doloremque eum? Perferendis nisi adipisci voluptate ullam totam, earum dignissimos voluptas consectetur debitis accusantium blanditiis, ipsam esse officia reiciendis voluptatum ab fugiat sint. Itaque nam sit pariatur, velit quaerat, sunt quasi molestias culpa neque assumenda saepe natus omnis numquam doloremque quos magni eum ut eaque provident voluptates suscipit! Repellendus iusto doloribus porro rerum aperiam. Qui veritatis repudiandae deserunt nisi, praesentium sequi excepturi fugit hic alias ratione.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum corrupti iusto quia dicta. Molestias illo sit soluta asperiores natus libero quae voluptatem ex minima maxime. At illum maiores ut perferendis quos, consequatur tenetur aperiam culpa aliquid praesentium enim, nam odio eaque, eveniet odit reprehenderit facere assumenda animi est veniam voluptatibus maxime esse. Consectetur eos sequi, iure atque minima maiores quasi dicta aperiam voluptas asperiores! Voluptatem sed nisi molestiae, in, dolores ipsum quo aut consequatur numquam ipsam repellendus ad! Ullam reiciendis laboriosam minus obcaecati fuga eum illum assumenda harum iure aliquid quidem eaque alias aspernatur dolore, cupiditate quo! Ad porro earum itaque eius libero ullam maiores nisi, eum, exercitationem culpa sequi tempora necessitatibus aliquam asperiores sint eos quas odit eaque sed, ipsam neque ratione deleniti. Praesentium magnam nostrum est voluptates quos, ad perspiciatis eveniet, enim consequuntur, architecto sint. Numquam cum minima animi, ipsam vero eum suscipit. Facilis, sapiente officiis quis labore, porro amet ipsum quos odio ullam non dolorum esse, iusto et eius voluptatum. Ea repellendus dolor aliquam ut eos! Suscipit consequuntur eveniet voluptatibus non. Optio placeat eveniet, quasi tempore omnis amet illum aut, voluptates dolor eligendi qui molestias sequi officiis perspiciatis quia. Amet voluptatum quidem, modi inventore aperiam laborum illo fugiat nam! Veritatis mollitia minima provident voluptatibus delectus sint consequatur quibusdam modi, alias facilis vel iure cupiditate autem. Reprehenderit architecto quam fuga iste voluptatibus fugit repellendus, neque voluptates, nihil quisquam explicabo similique. Impedit dolorem voluptas voluptatibus veritatis, expedita enim placeat! Iusto tempore, sint est dolor eaque obcaecati odio libero sapiente reiciendis consequatur, amet laudantium quo omnis laborum illum, similique praesentium. Illum natus earum a corporis quaerat quod hic, et ullam, voluptate nesciunt beatae ad reiciendis neque maxime vitae, voluptates eaque rem laboriosam sint nobis consequuntur! Modi aut in porro harum necessitatibus, adipisci molestias tenetur ex, aliquid ipsam optio deleniti sed nisi maiores debitis dolore sint! Quo dolore sit debitis earum esse. Praesentium numquam corrupti eveniet dolor sapiente quaerat mollitia at accusantium explicabo similique, sint animi qui vero sequi? Doloribus deserunt deleniti reiciendis nobis dignissimos impedit voluptatem, corrupti at cum ratione? Quasi veritatis ducimus molestias eos eius, quis recusandae accusamus dolorum magnam, esse ex dolores dignissimos mollitia voluptates maxime itaque. Corporis deleniti magnam dolor, sunt, expedita non atque eius asperiores voluptas ducimus libero, consequatur in repellendus culpa rem facere ullam nesciunt cum eos tempora. Quas, modi cupiditate? Ipsam incidunt quaerat quisquam repellat ducimus consectetur officiis possimus itaque laudantium eveniet! Ducimus, perspiciatis? Fugit earum perspiciatis facilis, qui consequatur dolor quo perferendis in ullam incidunt similique magni nisi, ipsum fugiat sed mollitia quia. Eos culpa adipisci perferendis ipsa saepe, eligendi tempore, aut maxime repudiandae voluptates modi consequatur provident, quasi reiciendis. Consequatur in quisquam voluptatum, dolore et tempore dolorum facere maxime dolor quia esse facilis temporibus ea molestias iusto, provident corrupti? Quod cum non possimus fuga, aperiam laboriosam adipisci nesciunt. Nulla impedit doloremque, dolor odio earum nobis, repudiandae dolores vitae eum iste inventore ut doloribus accusantium. Nam aliquam fugit eligendi tempore ut, soluta dolores reiciendis molestias tempora iure dignissimos neque dolorum dicta minima illo molestiae libero pariatur veniam. Tempora voluptate dolorum dicta, perspiciatis voluptatibus voluptates sit tenetur voluptas voluptatum dignissimos ipsa non odit inventore provident saepe debitis eos fugiat voluptatem beatae velit nihil incidunt cupiditate. Accusantium incidunt dolores esse, a ipsam ad exercitationem cupiditate repellat, harum explicabo vitae ducimus ea itaque. Molestias harum vitae nostrum sed dolorem tempore! Quis eveniet impedit modi nostrum et consequatur exercitationem, neque consectetur tempora sequi, possimus incidunt officiis animi asperiores quasi quaerat nam sint! Dolores distinctio accusantium mollitia aliquam voluptates quos corrupti. Iste accusamus quis dolores explicabo magni quo ratione, obcaecati nemo earum assumenda velit at perspiciatis quos molestias quas. Ratione culpa iure sint corrupti laborum voluptate vitae voluptas cum fuga omnis facere placeat repellendus deserunt obcaecati, repudiandae rerum provident quibusdam porro dolores excepturi eveniet? Earum sit quis magnam consequatur vitae eveniet, fuga perspiciatis! Distinctio molestiae repellat assumenda autem ratione dignissimos at aperiam a sunt id ex vero eaque tenetur, dolore, soluta magni optio eos illum? Voluptas, animi. Itaque distinctio, cum asperiores natus laboriosam veritatis labore molestias. Obcaecati quibusdam, consectetur repellat quidem aperiam in libero ab id omnis harum numquam beatae atque veniam facilis suscipit impedit amet eius. Sint cupiditate enim accusantium nulla voluptatum temporibus, repellat asperiores! Eius rerum impedit voluptatibus consequatur sequi tenetur, ea error quae possimus modi nam in dolorum nisi ullam voluptas, explicabo quos? Nisi accusamus consequatur unde exercitationem ducimus labore quam ipsum accusantium quaerat vel beatae nulla maxime harum, id voluptatibus ex voluptatem fugit reprehenderit nobis incidunt? Rem excepturi corrupti quod molestias quo velit doloribus quisquam vero architecto! Voluptate eaque ipsa, esse culpa totam quisquam rerum aliquid quis cupiditate eos commodi, pariatur error in maxime facere soluta itaque deleniti reiciendis neque quam consequuntur voluptatibus? Unde aliquam expedita alias dolores beatae dicta enim officiis harum incidunt officia dolore itaque facere repellat similique placeat, consectetur eaque doloribus doloremque accusamus delectus! Blanditiis at aperiam, neque sunt aliquid perspiciatis amet sint facere quaerat iste quod dolore repellat odio, maxime sapiente nisi ducimus nam, dolorum quasi! Numquam eius soluta sunt nemo enim accusantium nulla, ipsum, voluptas voluptatum aliquid incidunt dolores! Enim animi expedita asperiores omnis distinctio. Dolorem, odit! Enim corporis magni neque excepturi adipisci. Odio, ipsum, aut beatae quia fugiat quos, sapiente nisi facilis assumenda obcaecati magnam magni omnis repellat deserunt officia mollitia asperiores nam exercitationem porro enim dolores velit quam unde dolorum. Porro, repellendus! Ipsam labore, veniam alias nobis quae doloremque ullam, ipsa laudantium atque repellat consectetur vero quia dolor at voluptatum, accusamus autem. Pariatur, reiciendis expedita sapiente quia labore eligendi corporis ad tenetur error laudantium aspernatur ducimus amet dolor ratione neque modi quod fugit ipsam aut rem ipsum. Odit cumque quibusdam ratione ad, a numquam. Non fugiat ipsa vitae libero exercitationem rerum suscipit explicabo nemo eius earum quas reiciendis placeat quae excepturi commodi consequuntur dolorem corporis nihil inventore quisquam ullam dicta, facere et. Sapiente animi quidem inventore id culpa repellendus saepe nihil in magni placeat pariatur nostrum fuga, veritatis ullam perspiciatis dolorum cumque doloremque accusamus totam quam harum ipsa sed optio. Alias nisi necessitatibus voluptatum expedita consequuntur ipsum.
+        </div>
+       </div>
 </div>
+  </div>
 
-
-
-
-</header>
-<!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="js/jquery-1.11.3.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/script.js"></script>
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
