--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <ul class="dropdown-menu">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
             <li><a href="#">Chicken</a></li>
             <li><a href="#">Beef</a></li>
             <li><a href="#">Sushi</a></li>
