--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
       <ul class="nav navbar-nav">
         <li class="dropdown">
         <li><a href="#">Chicken</a></li>
+        <hr class="hr">
         <li><a href="#">Beef</a></li>
+         <hr class="hr">
         <li><a href="#">Sushi</a></li>
+         <hr class="hr">
       </ul>
     </div>
   </div>
