--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-        <li><a href="#">Chicken</a></li>
+        <li><a href="#" class="text-center" >Chicken</a></li>
         <hr class="hr">
-        <li><a href="#">Beef</a></li>
+        <li><a href="#" class="text-center" >Beef</a></li>
          <hr class="hr">
-        <li><a href="#">Sushi</a></li>
+        <li><a href="#" class="text-center" >Sushi</a></li>
          <hr class="hr">
       </ul>
     </div>
